<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles/Utility -->
    <string name="app_name">Celebrity Quiz</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>

    <string name="settingsTitle">Level of Difficulty</string>
    <string name="level1">Level One</string>
    <string name="level2">level Two</string>
    <string name="level3">level Three</string>

    <string name="timeTitle">Choose Countdown</string>
    <string name="seconds30">30 Seconds</string>
    <string name="seconds60">60 Seconds</string>
    <string name="seconds90">90 Seconds</string>

    <string name="categoryTitle">Choose Category</string>
    <string name="actor">actor</string>
    <string name="athlete">athlete</string>
    <string name="singer">singer</string>

    <string name="scoreContent">This is your score</string>
    <string name="scoreHeader">Score</string>

    <string name="textTime">30</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="update">Update from Internet</string>

    <string name="stage1">Stage 1</string>
    <string name="stage2">Stage 2</string>
    <string name="stage3">Stage 3</string>
</resources>

