<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stageContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".StageActivity">
    <Button
        android:id="@+id/buttonStage1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_rounded"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/stage1"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:onClick="onButtonStartQuiz"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/buttonStage2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/stage2"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:onClick="onButtonStartQuiz"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStage1" />
    <Button
        android:id="@+id/buttonStage3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/stage3"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:onClick="onButtonStartQuiz"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStage2" />
    <Button
        android:id="@+id/buttonStageBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:onClick="onButtonStageBackToMain"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStage3" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStageBack">
        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@color/colorAccent" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_marginRight="10dp"
                android:text="카테고리"
                android:textSize="20dp"
                android:textColor="@color/customDisabled"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="스테이지"
                android:textSize="20dp"
                android:textColor="@color/customDisabled"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="점수"
                android:textSize="20dp"
                android:textColor="@color/customDisabled"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="풀이시간"
                android:textSize="20dp"
                android:textColor="@color/customDisabled"/>
        </TableRow>
        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorAccent" />
        <TableRow android:gravity="center" android:layout_marginBottom="10dp" android:background="@color/colorAccent">
            <TextView
                android:id="@+id/textViewCategory1"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewStage1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewScore1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewTime1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow android:gravity="center" android:layout_marginBottom="10dp" android:background="@color/colorAccent">
            <TextView
                android:id="@+id/textViewCategory2"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewStage2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewScore2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewTime2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow android:gravity="center" android:layout_marginBottom="10dp" android:background="@color/colorAccent">
            <TextView
                android:id="@+id/textViewCategory3"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewStage3"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewScore3"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewTime3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow android:gravity="center" android:layout_marginBottom="10dp" android:background="@color/colorAccent">
            <TextView
                android:id="@+id/textViewCategory4"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewStage4"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewScore4"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewTime4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow android:gravity="center" android:layout_marginBottom="10dp" android:background="@color/colorAccent">
            <TextView
                android:id="@+id/textViewCategory5"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewStage5"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewScore5"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewTime5"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="16dp"
                android:textColor="@color/customDisabled"
                android:textAlignment="center"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>